--- a/artifactory/build.gradle
+++ b/artifactory/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 publishing {
     publications {
         jar(MavenPublication) {
-            groupId 'academy.newtech'
+            groupId 'cntxmx.tech'
             artifactId 'gs-gradle'
             version '1.0'
             from components.java
@@ -62,7 +62,7 @@ allprojects {
 artifactory {
     publish {
         repository {
-            repoKey = 'gradle-dev-local'
+            repoKey = 'cntx-gradle-dev-local'
             maven = true
         }
         defaults {
@@ -73,7 +73,7 @@ artifactory {
     }
     resolve {
         repository {
-            repoKey = 'gradle-dev'
+            repoKey = 'cntx-gradle-dev'
             maven = true
 
         }
